--- a/trunk/TODO
+++ b/trunk/TODO
@@ -116,9 +116,7 @@
     Google Code with download, documentation page
   - publication emails (with tutorial and news):
 
-    razvan.lionel.curtean@continental-corporation.com,
-    wrong!
-
+    razvan.ionel.curtean@continental-corporation.com,
     Steffen.Kernbach@continental-corporation.com,
     Johann.Massinger@continental-corporation.com,
     Marco.Mechi@continental-corporation.com,
